# multiHRI

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
oai_agents/agents/: __init__.py  agent_utils.py  base_agent.py  diversity_rl_trainer.py  hrl.py  il.py  mep_population_manager.py  rl.py
oai_agents/common/: agents_finder.py  arguments.py  checked_model_name_handler.py  curriculum.py  heatmap.py  learner.py  multi_setup_trainer.py  networks.py  overcooked_dataset.py  overcooked_gui.py  overcooked_simulation.py  path_helper.py  population.py  state_encodings.py  subtasks.py  tags.py  teammates_collection.py
oai_agents/gym_environments/: base_overcooked_env.py  manager_env.py  worker_env.py
rware_wrapper/: __init__.py  rware_wrapper.py
sandbox/: best_agent_type_layouts.py  calculate_complexity_naive.py  compares_agent_types.py  constants.py  create_masked_grids.py  fix_pop_ck_list_after_continued_run.py  generate_gif.py  learning_curve_comparison.py  similar_reward_layouts.py  std_heatmap.py  summarize_questionnaire.py  visualize_heatmap.py
scripts/: avg_perf_chart.py  avg_perf_chart_multi_seed.py  avg_perf_chart_unified.py  evaluate_agents.py  evaluate_agents_v2.py  generate_agents_for_eval.py  run_multiple_overcooked_games.py  run_overcooked_game.py  rware_utils.py  table_creator.py  train_agents.py  train_agents_without_bashing.py  training_chart.py
scripts/_others/: calculate_entropy_from_dataset.py  calculate_round_entropy.py  colosseum.py
scripts/bash_scripts/: classic_CAP_2_player.sh  classic_FCP_2_player.sh  env_config.sh  profile.sh
scripts/bash_scripts/best_baseline_experiment/: MEP_POP_c1.sh  MEP_POP_c2.sh  MEP_POP_c3.sh  MEP_POP_c4.sh  SP_c1_v1.sh  SP_c1_v2.sh  SP_c1_v2.sh:Zone.Identifier  SP_c1_v3.sh  SP_c1_v4.sh  SP_c2_v1.sh  SP_c2_v2.sh  SP_c2_v3.sh  SP_c2_v4.sh  SP_c3_v1.sh  SP_c3_v2.sh  SP_c3_v3.sh  SP_c3_v4.sh  SP_c4_v1.sh  SP_c4_v2.sh  SP_c4_v3.sh  SP_c4_v4.sh
scripts/utils/: __init__.py  common.py  eval_helper.py  eval_utils.py  layout_config.py  train_helper.py
tests/test_oai_agents/: test_base_agent.py  test_population.py
